pod-security-vpol/baseline/disallow-proc-mount/e2e/policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: disallow-proc-mount
spec:
  validationActions: [Audit]
status:
  conditionStatus:
    ready: true
